# waydroid-settings

./: FakeShell.vala  Info.vala  Makefile  README.md  Script.vala  Settings.vala  Window.vala  main.vala  meson.build
script/: shell.sh
